test/type-error-1.err.expect
test/type-error-1.ktn:4:7: error: cannot solve scalar type constraint [t1] = Int (input to __add_int)
test/type-error-1.ktn:4:7: note: [t1] is from here
test/type-error-1.ktn:4:7: note: t1 is from here
test/type-error-1.ktn:4:13: note: Int (input to __add_int) is from here
